# Weather-Rustler

./: .env  Cargo.toml
data/: oldweatherdata.db  weatherdata.db  weatherdata_copy.db  weatherdata_copy_main.db
migrations/2024-04-21-014105_create_weather_data/: down.sql  up.sql
src/: datautils.rs  main.rs  models.rs  schema.rs
